# retinal-ood-gatekeeper

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: codex_task.md
.github/workflows/: ci.yml
configs/: autoencoder_baseline.yaml  evaluation.yaml  patchcore_l1.yaml  patchcore_l2.yaml  patchcore_l23.yaml  patchcore_l3.yaml  patchcore_l4.yaml  patchcore_resnet50_l23.yaml
data/manifests/: manifest_template.csv
docs/: CODEX_MASTER_PROMPT.md  CODEX_TASKS.md  DATASET_PLAN_CN.md  EXPERIMENT_PROTOCOL_CN.md  EXPERIMENT_RUNBOOK_CN.md  FINAL_REPORT_OUTLINE_CN.md  GITHUB_WORKFLOW_CN.md  LITERATURE_REVIEW_ANALYSIS_CN.md  LOCAL_RUN_AND_DATASET_GUIDE_CN.md  PROJECT_SPEC_CN.md  RESULTS_INTERPRETATION_TEMPLATE_CN.md  RESULTS_TABLE_TEMPLATES.md  RISK_REGISTER_CN.md  TEN_WEEK_DISSERTATION_PLAN_CN.md
reports/: README.md
scripts/: build_ood_manifest.py  evaluate.py  evaluate_autoencoder.py  generate_artifacts.py  generate_dissertation_figures.py  generate_report_tables.py  merge_manifests.py  prepare_syntheye_dataset.py  serve_gatekeeper_app.py  train_autoencoder.py  train_patchcore.py
src/retinal_ood/: __init__.py
tests/: conftest.py  test_artifacts.py  test_autoencoder.py  test_dataset_schema.py  test_dissertation_figures.py  test_evaluate_cli.py  test_feature_extractor.py  test_gatekeeper_app.py  test_heatmaps.py  test_layer_ablation_configs.py  test_manifest_tools.py  test_metrics.py  test_patchcore.py  test_report_tables.py  test_reporting.py  test_syntheye_preparation.py  test_thresholds.py  test_train_patchcore_cli.py
(+18 files in other folders)
