[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retinal-ood-gatekeeper"
version = "0.1.0"
description = "Unsupervised out-of-distribution detection gatekeeper for retinal FAF quality control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pillow>=10.0",
    "opencv-python>=4.8",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "torch>=2.1",
    "torchvision>=0.16",
    "timm>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "black>=24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
